k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-backend
spec:
  type: ClusterIP
  selector:
    app: posts-backend
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
